--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,6 @@
     ],
     "browser_action": {
         "default_title": "Vault",
-        "default_popup": "popup/main.html"
+        "default_popup": "index.html"
     }
 }
