--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,11 @@
     "version": "0.1",
     "description": "Stores almost-sensitive data in a portable text",
     "permissions": [
-        "activeTab"
+        "activeTab",
+        "storage"
     ],
     "browser_action": {
-        "default_title": "Vault",
-        "default_popup": "index.html"
+        "default_title": "Example Web Extension",
+        "default_popup": "popup.html"
     }
 }
