--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "vault",
   "version": "0.0.1",
   "description": "A store for semi-sensitive passwords.",
-  "main": "index.js",
   "scripts": {
+    "start": "parcel manifest.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,15 +19,10 @@
     "url": "https://github.com/nmcapule/vault/issues"
   },
   "homepage": "https://github.com/nmcapule/vault#readme",
-  "dependencies": {
-    "@types/react": "^15.0.16",
-    "@types/react-dom": "^0.14.23",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
-  },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.1.2",
-    "source-map-loader": "^0.2.0",
-    "typescript": "^2.2.1"
+    "node-sass": "^4.9.2",
+    "parcel-bundler": "^1.9.7",
+    "parcel-plugin-web-extension": "^1.3.1",
+    "typescript": "^2.9.2"
   }
 }
